--- a/GameTime/WebContent/resources/templatemo_style.css
+++ b/GameTime/WebContent/resources/templatemo_style.css
@@ -9,7 +9,8 @@ body {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #e0e0ba;
-	background: url(images/henrique.png) no-repeat;
+	background: #3C3936 url(images/henrique.png) no-repeat;
+	background-size: 100% 100%;
 }
 
 a:link, a:visited { color: #ff5400; text-decoration: none; font-weight: normal;} 
@@ -31,6 +32,7 @@ img {
 	margin: 0px;
 	padding: 0px;
 	border: none;
+	margin-left: 644px;
 }
 
 .cleaner_w10 {
